...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hV-UJ-Bhz">
                                <rect key="frame" x="128" y="468" width="119" height="38"/>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="New Order">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="txm-eP-uB2" kind="presentation" identifier="newOrderSegue" id="TEl-DB-Oiz"/>
                                </connections>
                            </button>
...
                                </items>
                            </navigationBar>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9TO-hW-Cdc">
                                <rect key="frame" x="0.0" y="626" width="375" height="41"/>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Create Drink">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="createCustomerDrinkObject:" destination="PXJ-qd-eM3" eventType="touchUpInside" id="zTK-PT-GSK"/>
                                    <segue destination="yrZ-Ud-OTr" kind="presentation" identifier="createDrinkSegue" id="GL9-WW-1Ha"/>
                                </connections>
...
                                <rect key="frame" x="0.0" y="626" width="375" height="41"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ru-YA-vgU">
                                        <rect key="frame" x="187" y="0.0" width="188" height="41"/>
                                        <color key="backgroundColor" red="0.081444866960000001" green="0.94441527130000003" blue="0.066657684740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Confirm Order">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="confirmOrderPresed:" destination="yrZ-Ud-OTr" eventType="touchUpInside" id="Qan-wP-trD"/>
                                            <segue destination="SSP-ze-xmm" kind="presentation" identifier="confirmOrderSegue" id="Ry7-ix-dwW"/>
                                        </connections>
...
