...
        if (self.selectedToppings.count < 2) {
            cell?.layer.borderWidth = 2.0
            cell?.layer.borderColor = UIColor.green.cgColor
            
            self.selectedToppings.append(self.filteredToppings[indexPath.row])
        } else {
            let alert = UIAlertController(title: "Maximum Toppings Selected", message: "You May Only Have 2 Toppings Per Drink", preferredStyle: UIAlertControllerStyle.alert)
            let confirmAction =  UIAlertAction(title: "OK", style: UIAlertActionStyle.default)
            alert.addAction(confirmAction)
            self.present(alert, animated: true, completion: nil)
        }
    }
    
    func collectionView(_ collectionView: UICollectionView, didDeselectItemAt indexPath: IndexPath) {
...
